# scenario_simulator_v2

./: dependency_humble.repos
.github/workflows/: PoCSnyk.yaml
common/math/geometry/include/geometry/: distance.hpp
common/math/geometry/src/: distance.cpp
common/math/geometry/src/spline/: catmull_rom_spline.cpp
common/math/geometry/test/: test_catmull_rom_spline.cpp
mock/cpp_mock_scenarios/: CMakeLists.txt  package.xml
mock/cpp_mock_scenarios/launch/: mock_test.launch.py
mock/cpp_mock_scenarios/rviz/: mock_test.rviz
mock/cpp_mock_scenarios/src/: cpp_scenario_node.cpp
mock/cpp_mock_scenarios/src/random_scenario/: CMakeLists.txt  npc-not-stopping-issue-automovement.cpp  npc-not-stopping-issue-simple.cpp  npc-not-stopping-issue.cpp  random001-npc-not-stopping-issue-simple.cpp  random001-npc-not-stopping-issue.cpp  random001.cpp  random002-odaiba.cpp  random003-bs.cpp  scenario_base.cpp
mock/cpp_mock_scenarios/src/random_scenario/random_parameters/: random004.yaml
openscenario/openscenario_experimental_catalog/vehicle/: some_vehicle.yaml
openscenario/openscenario_interpreter/src/: openscenario_interpreter.cpp
openscenario/openscenario_preprocessor/src/: openscenario_preprocessor.cpp  openscenario_preprocessor_node.cpp
rviz_plugins/openscenario_visualization/src/openscenario_visualization_plugins/: openscenario_visualization_parameters_plugin.cpp
simulation/behavior_tree_plugin/include/behavior_tree_plugin/: action_node.hpp
simulation/behavior_tree_plugin/src/: action_node.cpp
simulation/behavior_tree_plugin/src/vehicle/follow_lane_sequence/: follow_lane_action.cpp
simulation/simple_sensor_simulator/: CMakeLists.txt
simulation/simple_sensor_simulator/src/: simple_sensor_simulator.cpp
simulation/simple_sensor_simulator/src/vehicle_simulation/: ego_entity_simulation.cpp
simulation/simple_sensor_simulator/test/: CMakeLists.txt
simulation/traffic_simulator/: CMakeLists.txt  package.xml
simulation/traffic_simulator/config/: scenario_simulator_v2.rviz
simulation/traffic_simulator/include/traffic_simulator/api/: api.hpp
simulation/traffic_simulator/include/traffic_simulator/data_type/: entity_status.hpp
simulation/traffic_simulator/include/traffic_simulator/entity/: ego_entity.hpp  entity_base.hpp  entity_manager.hpp  misc_object_entity.hpp  pedestrian_entity.hpp  vehicle_entity.hpp
simulation/traffic_simulator/src/api/: api.cpp
simulation/traffic_simulator/src/entity/: ego_entity.cpp  entity_base.cpp  entity_manager.cpp  misc_object_entity.cpp  pedestrian_entity.cpp  vehicle_entity.cpp
simulation/traffic_simulator/src/traffic_lights/: traffic_light_publisher.cpp
simulation/traffic_simulator/src/visualization/: visualization_component.cpp
test_runner/scenario_test_runner/scenario/: switching_catalog.xosc  switching_catalog.yaml  switching_catalog_base.xosc
